Refactor HTML structure for better semantics

--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
     <header>
-        <h1>Torneo di Calcio</h1>
-        <nav>
-            <a href="index.html">Classifica</a>
-            <a href="partite.html">Partite</a>
-            <a href="marcatori.html">Marcatori</a>
-            <a href="squadre.html">Squadre</a>
-        </nav>
+        <div class="container">
+            <h1>Torneo di Calcio</h1>
+            <nav>
+                <a href="index.html">Classifica</a>
+                <a href="partite.html">Partite</a>
+                <a href="marcatori.html">Marcatori</a>
+                <a href="squadre.html">Squadre</a>
+            </nav>
+        </div>
     </header>
 
-    <main>
+    <main class="container">
         <h2>Classifica</h2>
         <table id="tabella-classifica">
             <thead>
@@ -35,7 +38,8 @@
                 </tr>
             </thead>
             <tbody id="corpo-classifica">
-                </tbody>
+                <tr><td colspan="10">Caricamento...</td></tr>
+            </tbody>
         </table>
     </main>
 
