--- a/partite.html
+++ b/partite.html
@@ -23,15 +23,11 @@
     <main class="container">
         <h2>Calendario e Risultati</h2>
         
-        <div id="partite-da-giocare" class="match-list">
-            <h3>Partite da Giocare</h3>
+        <div id="calendario-completo" class="match-list">
             </div>
-
-        <div id="partite-giocate" class="match-list">
-            <h3>Partite Giocate</h3>
-            </div>
+        
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/partite.js"></script>
 </body>
 </html>
