--- a/marcatori.html
+++ b/marcatori.html
@@ -40,6 +40,6 @@
         </table>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/marcatori.js"></script>
 </body>
 </html>
