--- a/squadre.html
+++ b/squadre.html
@@ -28,6 +28,6 @@
         </div>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/squadre.js"></script>
 </body>
 </html>
