--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <div class="container">
-            <h1>Torneo di Calcio</h1>
+            <h1>Step Tournament</h1>
             <nav>
                 <a href="index.html">Classifica</a>
                 <a href="partite.html">Partite</a>
@@ -41,7 +41,19 @@
                 <tr><td colspan="10">Caricamento...</td></tr>
             </tbody>
         </table>
-    </main>
+
+        <footer class="legenda">
+            <h3>Legenda e Calcolo Punti</h3>
+            <p><strong>Pt:</strong> Punti (Vittoria: 3 punti | Pareggio: 1 punto | Sconfitta: 0 punti)</p>
+            <p><strong>G:</strong> Partite Giocate</p>
+            <p><strong>V:</strong> Vittorie</p>
+            <p><strong>N:</strong> Pareggi</p>
+            <p><strong>S:</strong> Sconfitte</p>
+            <p><strong>GF:</strong> Goal Fatti</p>
+            <p><strong>GS:</strong> Goal Subiti</p>
+            <p><strong>DR:</strong> Differenza Reti (GF - GS)</p>
+        </footer>
+        </main>
 
     <script src="js/main.js"></script>
 </body>
