--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <div class="container">
-            <h1>Step Tournament</h1>
+            <h1>Torneo di Calcio</h1>
             <nav>
                 <a href="index.html">Classifica</a>
                 <a href="partite.html">Partite</a>
@@ -53,8 +53,8 @@
             <p><strong>GS:</strong> Goal Subiti</p>
             <p><strong>DR:</strong> Differenza Reti (GF - GS)</p>
         </footer>
-        </main>
+    </main>
 
-    <script src="js/main.js"></script>
+    <script src="js/classifica.js"></script>
 </body>
 </html>
