--- a/partite.html
+++ b/partite.html
@@ -24,7 +24,8 @@
         <h2>Calendario e Risultati</h2>
         
         <div id="calendario-completo" class="match-list">
-            </div>
+            <p>Caricamento calendario...</p>
+        </div>
         
     </main>
 
